--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "pulp": "4.4.1",
-    "purescript": "0.7.4"
+    "purescript": "0.7.5-rc.3"
   },
   "engines": {
     "node": "4.2.1",
