--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "pulp": "4.4.1",
+    "bower": "1.6.5",
+    "pulp": "bodil/pulp#ff70a542cc732c4572b4ff0c5ced709078aecdd6",
     "purescript": "0.7.5-rc.3"
   },
   "engines": {
@@ -11,6 +12,7 @@
   "scripts": {
     "postinstall": "pulp dep install",
     "pulp": "pulp",
+    "psc-publish": "psc-publish",
     "test": "pulp test"
   }
 }
