--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
     "pulp": "bodil/pulp#ff70a542cc732c4572b4ff0c5ced709078aecdd6",
     "purescript": "0.7.5-rc.3"
   },
+  "devDependencies": {
+    "eslint": "1.8.0"
+  },
   "engines": {
     "node": "5.0.0",
     "npm": "3.3.9"
   },
   "private": true,
   "scripts": {
+    "lint": "eslint",
     "postinstall": "pulp dep install",
     "pulp": "pulp",
     "psc-publish": "psc-publish",
