--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   },
   "private": true,
   "scripts": {
-    "lint": "eslint",
+    "eslint": "eslint",
     "postinstall": "pulp dep install",
     "pulp": "pulp",
     "psc-publish": "psc-publish",
-    "test": "pulp test"
+    "test": "pulp test && psc-publish --dry-run && eslint src"
   }
 }
