--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: node_js
 node_js:
 - 4.1
+after_success:
+- npm run psc-publish | tail -n 1 > purescript-neon-${TRAVIS_TAG}.json
+- >-
+  test $TRAVIS_TAG && 
+    curl -X POST http://pursuit.purescript.org/packages \
+      -d @purescript-neon-${TRAVIS_TAG}.json \
+      -H 'Accept: application/json' \
+      -H "Authorization: token ${GITHUB_TOKEN}"
