--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ after_success:
 - echo $TRAVIS_TAG
 - git status
 - git status --porcelain
-- npm run psc-publish | tail -n 1 > purescript-neon-${TRAVIS_TAG}.json
+- npm run psc-publish | tail -n 1 > output/purescript-neon-${TRAVIS_TAG}.json
 - >-
   test $TRAVIS_TAG &&
     curl -X POST http://pursuit.purescript.org/packages \
-      -d @purescript-neon-${TRAVIS_TAG}.json \
+      -d @output/purescript-neon-${TRAVIS_TAG}.json \
       -H 'Accept: application/json' \
       -H "Authorization: token ${GITHUB_TOKEN}"
