Revert "Always run psc-publish"
This reverts commit dc972d0bbe3ff9d9a3c7c988d069e18299a1a6cf.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ node_js:
 - 4.1
 after_success:
 - >-
+  test $TRAVIS_TAG &&
   npm run psc-publish \
     | tail -n 1 \
     > output/purescript-neon-${TRAVIS_TAG}.json &&
