--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "bower": "1.6.5",
-    "pulp": "bodil/pulp#ff70a542cc732c4572b4ff0c5ced709078aecdd6",
+    "pulp": "4.5.0",
     "purescript": "0.7.6-rc.1"
   },
   "devDependencies": {
