--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
   "ignore": [
     "/.psci",
     "/.psci_modules/",
+    "/.pulp-cache/",
     "/bower_components/",
     "/docs/",
     "/node_modules/",
