--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,11 @@
       "name": "Taylor Fausak"
     }
   ],
+  "dependencies": {
+    "purescript-console": "0.1.1",
+    "purescript-eff": "0.1.2",
+    "purescript-prelude": "0.1.3"
+  },
   "description": "An experimental PureScript prelude.",
   "homepage": "https://github.com/tfausak/purescript-neon",
   "ignore": [
