Cache the Node modules directory

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,6 @@ after_success:
     -d @output/purescript-neon-${TRAVIS_TAG}.json \
     -H 'Accept: application/json' \
     -H "Authorization: token ${GITHUB_TOKEN}"
+cache:
+  directories:
+  - node_modules
