Add more to the README

--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
       "name": "Taylor Fausak"
     }
   ],
-  "description": "An experimental PureScript prelude.",
+  "description": "An experimental standard library for PureScript.",
   "homepage": "https://github.com/tfausak/purescript-neon",
   "ignore": [
     "/.psci",
