Add resolutions back
I hate them, but they're necessary.

--- a/bower.json
+++ b/bower.json
@@ -40,5 +40,9 @@
   "repository": {
     "type": "git",
     "url": "git://github.com/tfausak/purescript-neon.git"
+  },
+  "resolutions": {
+    "purescript-aff": "~0.13.0",
+    "purescript-transformers": "~0.8.2"
   }
 }
