--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
   },
   "description": "An experimental standard library for PureScript.",
   "devDependencies": {
-    "purescript-spec": "0.7.2"
+    "purescript-quickcheck": "0.12.2",
+    "purescript-spec": "0.7.2",
+    "purescript-spec-quickcheck": "0.3.0"
   },
   "homepage": "https://github.com/tfausak/purescript-neon",
   "ignore": [
@@ -42,7 +44,10 @@
     "url": "git://github.com/tfausak/purescript-neon.git"
   },
   "resolutions": {
-    "purescript-aff": "~0.13.0",
-    "purescript-transformers": "~0.8.2"
+    "purescript-aff": "0.13.1",
+    "purescript-quickcheck": "0.12.2",
+    "purescript-spec": "0.7.2",
+    "purescript-strings": "0.7.1",
+    "purescript-transformers": "0.8.4"
   }
 }
