--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
   },
   "description": "An experimental standard library for PureScript.",
   "devDependencies": {
-    "purescript-quickcheck": "0.12.2",
+    "purescript-quickcheck": "0.6.0",
     "purescript-spec": "0.7.2",
     "purescript-spec-quickcheck": "0.3.0"
   },
@@ -44,10 +44,9 @@
     "url": "git://github.com/tfausak/purescript-neon.git"
   },
   "resolutions": {
-    "purescript-aff": "0.13.1",
-    "purescript-quickcheck": "0.12.2",
-    "purescript-spec": "0.7.2",
-    "purescript-strings": "0.7.1",
-    "purescript-transformers": "0.8.4"
+    "purescript-aff": "~0.13.0",
+    "purescript-spec": "~0.7.2",
+    "purescript-strings": "~0.7.1",
+    "purescript-transformers": "~0.8.2"
   }
 }
