--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "bower": "1.7.7",
     "pulp": "8.0.0",
-    "purescript": "0.8.0-rc.1"
+    "purescript": "0.8.0"
   },
   "engines": {
     "node": "5.5.0",
