Don't pass "--force" to the tests
Apparently it's not a valid option anymore.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "postinstall": "bower install",
     "psc-publish": "psc-publish",
     "pulp": "pulp",
-    "test": "pulp test --force && psc-publish --dry-run"
+    "test": "pulp test && psc-publish --dry-run"
   },
   "version": "0.0.0-private"
 }
