--- a/bower.json
+++ b/bower.json
@@ -7,16 +7,10 @@
     }
   ],
   "dependencies": {
-    "purescript-eff": "0.1.2",
-    "purescript-globals": "0.2.2",
-    "purescript-integers": "0.2.1",
-    "purescript-prelude": "0.1.4",
-    "purescript-random": "0.2.3",
-    "purescript-strings": "0.7.1"
+    "purescript-batteries": "0.5.1"
   },
   "description": "An experimental standard library for PureScript.",
   "devDependencies": {
-    "purescript-aff": "0.14.0",
     "purescript-quickcheck": "0.12.2",
     "purescript-test-unit": "4.1.0"
   },
@@ -47,5 +41,8 @@
   "repository": {
     "type": "git",
     "url": "git://github.com/tfausak/purescript-neon.git"
+  },
+  "resolutions": {
+    "purescript-aff": "~0.14.0"
   }
 }
