--- a/bower.json
+++ b/bower.json
@@ -1,48 +1,17 @@
 {
-  "authors": [
-    {
-      "email": "taylor@fausak.me",
-      "homepage": "http://taylor.fausak.me",
-      "name": "Taylor Fausak"
-    }
-  ],
   "dependencies": {
     "purescript-batteries": "0.5.1"
   },
-  "description": "An experimental standard library for PureScript.",
   "devDependencies": {
     "purescript-quickcheck": "0.12.2",
     "purescript-test-unit": "4.1.0"
   },
-  "homepage": "https://github.com/tfausak/purescript-neon",
-  "ignore": [
-    "/.psci",
-    "/.psci_modules/",
-    "/.pulp-cache/",
-    "/bower_components/",
-    "/docs/",
-    "/node_modules/",
-    "/npm-debug.log",
-    "/output/"
-  ],
-  "keywords": [
-    "core",
-    "library",
-    "neon",
-    "prelude",
-    "purescript",
-    "standard"
-  ],
-  "license": "MIT",
-  "main": [
-    "src/Neon.purs"
-  ],
   "name": "purescript-neon",
   "repository": {
     "type": "git",
     "url": "git://github.com/tfausak/purescript-neon.git"
   },
   "resolutions": {
-    "purescript-aff": "~0.14.0"
+    "purescript-aff": "0.14.0"
   }
 }
