--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
     "pulp": "8.0.0",
     "purescript": "0.8.0"
   },
-  "engines": {
-    "node": "5.5.0",
-    "npm": "3.5.3"
-  },
   "private": true,
   "scripts": {
+    "bower": "bower",
     "postinstall": "bower install",
     "psc-publish": "psc-publish",
+    "pulp": "pulp",
     "test": "pulp test && psc-publish --dry-run"
   }
 }
