--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "bower": "1.7.9",
     "pulp": "8.1.1",
-    "purescript": "0.8.5"
+    "purescript": "0.8.6-rc.1"
   },
   "engines": {
     "node": "6.0.0",
