--- a/bower.json
+++ b/bower.json
@@ -1,19 +1,64 @@
 {
   "dependencies": {
-    "purescript-batteries": "0.5.4"
+    "purescript-arrays": "^4.0.1",
+    "purescript-foldable-traversable": "^3.6.0",
+    "purescript-bifunctors": "^3.0.0",
+    "purescript-control": "^3.0.0",
+    "purescript-prelude": "^3.0.0",
+    "purescript-newtype": "^2.0.0",
+    "purescript-maybe": "^3.0.0",
+    "purescript-monoid": "^3.0.0",
+    "purescript-invariant": "^3.0.0",
+    "purescript-st": "^3.0.0",
+    "purescript-eff": "^3.1.0",
+    "purescript-tailrec": "^3.3.0",
+    "purescript-identity": "^3.0.0",
+    "purescript-tuples": "^4.0.0",
+    "purescript-distributive": "^3.0.0",
+    "purescript-unfoldable": "^3.0.0",
+    "purescript-unsafe-coerce": "^3.0.0",
+    "purescript-console": "^3.0.0",
+    "purescript-either": "^3.0.0",
+    "purescript-enums": "^3.1.0",
+    "purescript-exceptions": "^3.0.0",
+    "purescript-lists": "^4.0.0",
+    "purescript-lazy": "^3.0.0",
+    "purescript-nonempty": "^4.0.0",
+    "purescript-random": "^3.0.0",
+    "purescript-integers": "^3.2.0",
+    "purescript-globals": "^3.0.0",
+    "purescript-strings": "^3.0.0",
+    "purescript-transformers": "^3.0.0",
+    "purescript-proxy": "^2.0.0",
+    "purescript-functions": "^3.0.0",
+    "purescript-aff": "^4.0.0",
+    "purescript-parallel": "^3.0.0",
+    "purescript-refs": "^3.0.0",
+    "purescript-functors": "^2.0.0",
+    "purescript-const": "^3.0.0",
+    "purescript-contravariant": "^3.0.0",
+    "purescript-datetime": "^3.0.0",
+    "purescript-generics": "^4.0.0",
+    "purescript-maps": "^3.0.0",
+    "purescript-catenable-lists": "^4.0.0",
+    "purescript-exists": "^3.0.0",
+    "purescript-free": "^4.2.0",
+    "purescript-nullable": "^3.0.0",
+    "purescript-debug": "^3.0.0",
+    "purescript-profunctor": "^3.2.0",
+    "purescript-sets": "^3.1.0",
+    "purescript-lens": "^3.0.0",
+    "purescript-assert": "^3.0.0",
+    "purescript-folds": "^3.1.0"
   },
   "devDependencies": {
-    "purescript-quickcheck": "0.12.2",
-    "purescript-test-unit": "5.0.0"
+    "purescript-quickcheck": "^4.6.1",
+    "purescript-test-unit": "^13.0.0"
   },
   "license": "MIT",
   "name": "purescript-neon",
   "repository": {
     "type": "git",
     "url": "git://github.com/tfausak/purescript-neon.git"
-  },
-  "resolutions": {
-    "purescript-math": "~1.0.0",
-    "purescript-proxy": "~1.0.0"
   }
 }
