--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "dependencies": {
-    "bower": "1.7.9",
-    "pulp": "8.1.1",
-    "purescript": "0.8.6-rc.1"
+    "bower": "1.8.2",
+    "pulp": "12.0.1",
+    "purescript": "0.11.7"
   },
   "private": true,
   "scripts": {
